# ircbot

./: .gitignore  ChangeLog.md  LICENSE  cabal.project  flake.nix  ircbot.cabal  result
app/: API.hs  Config.hs  Eval.hs  Main.hs  Parser.hs  SASL.hs  STLC.hs  Types.hs  Utils.hs
dsl/: PQ.hs
