cabal-version:      2.4
name:               ircbot
version:            0.0.0.0
description:
  Please see the README on GitLab at <https://github.com/unsafeIO/ircbot#readme>

homepage:           https://github.com/unsafeIO/ircbot#readme
bug-reports:        https://github.com/unsafeIO/ircbot/issues
author:             unsafeIO
maintainer:         unsafeIO
copyright:          unsafeIO
license:            WTFPL
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/unsafeIO/ircbot

library dsl
  hs-source-dirs:  dsl
  exposed-modules: PQ
  build-depends:
    , base       >=4.7 && <5
    , microlens
    , pixiv
    , text

executable ircbot
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:
    API
    Config
    Eval
    Parser
    STLC
    Types
    Utils

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base             >=4.7 && <5
    , bytestring
    , dsl
    , exceptions
    , ghc
    , hint
    , http-client
    , http-client-tls
    , irc-client
    , megaparsec
    , microlens
    , mtl
    , pixiv
    , pretty-simple
    , prettyprinter
    , random
    , random-shuffle
    , regex-tdfa
    , servant-client
    , stm
    , tagsoup
    , text
    , time
    , unix

  default-language: Haskell2010
